initial coding project

--- a/hi.tree.html
+++ b/hi.tree.html
@@ -22,8 +22,8 @@ hi.tree</font>
 <span class="s0">&lt;instance-profile </span><span class="s1">id</span><span class="s2">=&quot;hi&quot; </span><span class="s1">name</span><span class="s2">=&quot;Help Instance&quot;</span>
                  <span class="s1">start-page</span><span class="s2">=&quot;&quot;</span><span class="s0">&gt;</span>
 
-    <span class="s0">&lt;toc-element </span><span class="s1">topic</span><span class="s2">=&quot;LNL-CTT-SCAN-AAR.md&quot;</span><span class="s0">/&gt;</span>
-    <span class="s0">&lt;toc-element </span><span class="s1">topic</span><span class="s2">=&quot;CTT-AT-Bstep.md&quot;</span><span class="s0">/&gt;</span>
+    <span class="s0">&lt;toc-element </span><span class="s1">topic</span><span class="s2">=&quot;PUP.md&quot;</span><span class="s0">/&gt;</span>
+    <span class="s0">&lt;toc-element </span><span class="s1">topic</span><span class="s2">=&quot;flash.md&quot;</span><span class="s0">/&gt;</span>
 <span class="s0">&lt;/instance-profile&gt;</span></pre>
 </body>
 </html>
