--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<html><head><title>C:\Users\ahamdan\WritersideProjects\LNL_CTT\Writerside</title></head><body><a href="hi.tree.html">hi.tree</a><br /><a href="writerside.cfg.html">writerside.cfg</a><br /></body></html>
+<html>
+<head><title>C:\Users\ahamdan\WritersideProjects\LNL_CTT\Writerside</title></head>
+<body><a href="hi.tree.html">hi.tree</a><br/><a href="writerside.cfg.html">writerside.cfg</a><br/></body>
+</html>
